<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_todo"
            android:id="@+id/todo"
            android:contentDescription="@string/descTodo"
                android:layout_marginEnd="10dp" />

            <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                    android:id="@+id/noteName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fname"
                    android:textStyle="normal|bold"
                    android:textSize="17sp"
                    android:maxLength="35"
                    android:fontFamily="sans-serif"
                    />

                <TextView
                    android:id="@+id/noteDateS"
                    android:maxLength="5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fsdate"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/noteDate"
                    android:maxLength="5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fdate"
                    android:gravity="end"
                    android:layout_weight="1" />
            </LinearLayout>
                <TextView
                    android:id="@+id/noteContent"
                    android:maxLength="100"
                    android:text="@string/fcontent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>